fix: set overflow-x to clip for body
  This is a bandaid fix for the unusual scrollbar on the
  publications page.

--- a/css/styles.css
+++ b/css/styles.css
@@ -12,6 +12,7 @@ body {
     align-items: center;
     width: 100%;
     min-height: 100vh;
+    overflow-x: clip;
 }
 
 header {
